tests/bad/ident_type.radl

n : node {
    SUBSCRIBES s1 { TOPIC s1 MAXLATENCY 10msec }
    PERIOD 10msec
    CXX { HEADER "h.h" CLASS "H" }
}
